--- a/data/settings.html
+++ b/data/settings.html
@@ -37,7 +37,7 @@
               WiFi Password:
             </td>
             <td class="hwidth" style="text-align:left;font-size: medium;">
-              <input type="text" name="wifiPass" value="%wifiPass%">
+              <input type="password" name="wifiPass" value="%wifiPass%">
             </td>
           </tr>
         </table>
