--- a/data/settings.html
+++ b/data/settings.html
@@ -307,6 +307,20 @@
         <table class="fwidth">
           <tr>
             <td class="hwidth" style="text-align:right;font-size: medium;">
+              Disable RX tone:
+            </td>
+            <td class="hwidth" style="text-align:left;font-size: medium;">
+              <input type="checkbox" name="disableRXTone" value="disableRXTone" %disableRXTone%>
+            </td>
+          </tr>
+        </table>
+      </div>
+      <br>
+
+      <div class="divinfo">
+        <table class="fwidth">
+          <tr>
+            <td class="hwidth" style="text-align:right;font-size: medium;">
               Beacon after TX:
             </td>
             <td class="hwidth" style="text-align:left;font-size: medium;">
@@ -368,6 +382,34 @@
             <td class="hwidth" style="text-align:left;font-size: medium;">
               <input type="number" name="maxChannel" value="%maxChannel%" min="0" max="320">
               <span style="color:red;font-size: medium;">%maxFreq%</span>
+            </td>
+          </tr>
+        </table>
+      </div>
+      <br>
+
+      <div class="divinfo">
+        <table class="fwidth">
+          <tr>
+            <td class="hwidth" style="text-align:right;font-size: medium;">
+              Mike level:
+            </td>
+            <td class="hwidth" style="text-align:left;font-size: medium;">
+              <input type="number" name="mikeLevel" value="%mikeLevel%" min="0" max="8">
+            </td>
+          </tr>
+        </table>
+      </div>
+      <br>
+
+      <div class="divinfo">
+        <table class="fwidth">
+          <tr>
+            <td class="hwidth" style="text-align:right;font-size: medium;">
+              Repeat Set DRA:
+            </td>
+            <td class="hwidth" style="text-align:left;font-size: medium;">
+              <input type="number" name="repeatSetDRA" value="%repeatSetDRA%" min="1" max="5">
             </td>
           </tr>
         </table>
