More beautiful webpages

--- a/testje.html
+++ b/testje.html
@@ -13,14 +13,22 @@ p {
 body {  
     margin: 0;
 }
-.hwidth {
-    width: 50%;
-}
 
 .fwidth {
     width: 100%;
 }
 
+.1width {
+    width: 10%;
+}
+
+.hwidth {
+    width: 50%;
+}
+
+.8width {
+    width: 80%;
+}
 .freqdisp {
     border: none;
     background-color: gray;
@@ -39,7 +47,6 @@ body {
 }
 .divinfo { 	
     overflow: hidden; 
-    background-color: gray; 
     color: white; 
     font-size: 0.7rem; 
     height:100;
@@ -47,7 +54,6 @@ body {
 }
 .freqinfo { 	
     overflow: hidden; 
-    background-color: gray;
     color: yellow; 
     font-size: 1rem; 
     line-height: 0%;
@@ -73,25 +79,31 @@ body {
 }
 
     </style>
-<head>
-  <title>APRS Radio Server</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <!-- <meta http-equiv="refresh" content="1">  -->
-  <link rel="icon" href="data:,">
-  <!-- <link rel="stylesheet" type="text/css" href="style.css"> -->
-</head>
-<body>
-<div class="topnav">
-  <h1>APRS Radio Server</h1>
-</div>
-<hr>
-<div class="divinfo">
-    <table class="fwidth">
-        <tr>
+
+
+  <head>
+    <title>APRS Radio Server</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!-- <meta http-equiv="refresh" content="1">  -->
+    <link rel="icon" href="data:,">
+    <link rel="stylesheet" type="text/css" href="style.css">
+  </head>
+  <body>
+  <div class="topnav">
+    <h1>APRS Radio Server</h1>
+  </div>
+  <hr>
+  <div class="divinfo">
+
+  </div>
+  <hr>
+    <div class="freqinfo" style="border:solid; border-radius: 2em; border-color: black; background-image: linear-gradient(#6781F1, #ADD8E6); text-align:center">
+        <table class="fwidth">  
+          <tr>
             <td>
-                <h4 style="text-align:left;color:lightblue"><span id="APRSINFO">%APRSINFO%</span></h4>
-                <h4 style="text-align:left;color:orange"><span id="GPSINFO">%GPSINFO%</span></h4>
-                <h4 style="text-align:left;color:red"><span id="BEACONINFO">%BEACONINFO%</span></h4>
+              <h4 style="text-align:left;color:lightblue"><span id="APRSINFO">%APRSINFO%</span></h4>
+              <h4 style="text-align:left;color:orange"><span id="GPSINFO">%GPSINFO%</span></h4>
+              <h4 style="text-align:left;color:red"><span id="BEACONINFO">%BEACONINFO%</span></h4>
             </td>
             <td style="text-align: right;">
                 <meter id="s-meter"
@@ -101,119 +113,117 @@ body {
                 </meter>
             </td>
         </tr>
-    </table>
-</div>
-<hr>
-<table class="fwidth">
-    <tr>
-        <td style="position: absolute; left: 20%; width: 80%;">
-            <div class="freqinfo" class="card" style="border:solid; border-radius: 2em; border-color: black; background-image: linear-gradient(#6781F1, #ADD8E6); width:80%; text-align:center">
-                <h1><span id="RXFREQ">%RXFREQ%</span></h1>
-                <h4 style="text-align:center;color:yellow""><span id="REPEATERINFO"><small><small>%REPEATERINFO%</small></small></span><span id="TXFREQ">%TXFREQ%</span></h4>
-              </div>
-        </td>
-    </tr>
-</table>
+      </table>
+      <div class="freqinfo">
+        <h1><span id="RXFREQ">%RXFREQ%</span></h1>
+      </div>
+      <div class="divinfo">    
+        <h4 style="text-align:center;color:yellow""><span id="REPEATERINFO">%REPEATERINFO%</span>&nbsp<span id="TXFREQ">%TXFREQ%</span></h4>
+      </div>
+    </div>
+  <hr>
 
-
-<hr>
-<div class="content">
-  <div class="cards">
-    %BUTTONS0%
-
-    <div id="BTN%s" class="card" style="border:solid; border-radius: 2em; background-image: linear-gradient(#6781F1, #ADD8E6)"><p>%s</p><p style="background-color:%s;color:white"><span class="reading"><span id="%s">%s</span></span></p></div>
+  <hr>
+  <div class="content">
+    <div class="cards">
+      %BUTTONS0%
+    </div>
   </div>
-</div>
-<hr>
-<div class="topnav" style="background-color: lightblue; ">
-  <table class="fwidth">
-    <tbody>
-      <tr>
-        <td style="text-align:left">
-          <h4>Copyright (c) Robert de Kok, PA2RDK</h4>
-        </td>
-        <td style="text-align:right">
-          <a href="/settings"><button>Settings</button></a>
-          <a href="/reboot"><button>Reboot</button></a>
-        </td>
-      </tr>
-    </tbody>
-  </table>
-</div>
+  <hr>
+  <div class="topnav" style="background-color: lightblue; ">
+    <table class="fwidth">
+      <tbody>
+        <tr>
+          <td style="text-align:left">
+            <h4>Copyright (c) Robert de Kok, PA2RDK</h4>
+          </td>
+          <td style="text-align:right">
+            <a href="/settings"><button>Settings</button></a>
+            <a href="/reboot"><button>Reboot</button></a>
+          </td>
+        </tr>
+      </tbody>
+    </table>
+  </div>
 
-<script>
-if (!!window.EventSource) {
-  var source = new EventSource('/events');
+  <script>
+  if (!!window.EventSource) {
+    var source = new EventSource('/events');
+  
+    source.addEventListener('open', function(e) {
+      console.log("Events Connected");
+    }, false);
+  
+    source.addEventListener('error', function(e) {
+      if (e.target.readyState != EventSource.OPEN) {
+        console.log("Events Disconnected");
+      }
+    }, false);
+  
+    source.addEventListener('message', function(e) {
+      console.log("message", e.data);
+    }, false);
+  
+    source.addEventListener('APRSINFO', function(e) {
+      console.log("APRSINFO", e.data);
+      document.getElementById("APRSINFO").innerHTML = e.data;
+    }, false);
+  
+    source.addEventListener('GPSINFO', function(e) {
+      console.log("GPSINFO", e.data);
+      document.getElementById("GPSINFO").innerHTML = e.data;
+    }, false);
 
-  source.addEventListener('open', function(e) {
-    console.log("Events Connected");
-  }, false);
+    source.addEventListener('SWRINFO', function(e) {
+      console.log("SWRINFO", e.data);
+      document.getElementById('s-meter').setAttribute('value', e.data);
+    }, false);
 
-  source.addEventListener('error', function(e) {
-    if (e.target.readyState != EventSource.OPEN) {
-      console.log("Events Disconnected");
-    }
-  }, false);
+    source.addEventListener('RXFREQ', function(e) {
+      console.log("RXFREQ", e.data);
+      document.getElementById("RXFREQ").innerHTML = e.data;
+    }, false);
 
-  source.addEventListener('message', function(e) {
-    console.log("message", e.data);
-  }, false);
+    source.addEventListener('REPEATERINFO', function(e) {
+      console.log("REPEATERINFO", e.data);
+      document.getElementById("REPEATERINFO").innerHTML = e.data;
+    }, false);
 
-  source.addEventListener('APRSINFO', function(e) {
-    console.log("APRSINFO", e.data);
-    document.getElementById("APRSINFO").innerHTML = e.data;
-  }, false);
+    source.addEventListener('BEACONINFO', function(e) {
+      console.log("BEACONINFO", e.data);
+      document.getElementById("BEACONINFO").innerHTML = e.data;
+    }, false);
 
-  source.addEventListener('GPSINFO', function(e) {
-    console.log("GPSINFO", e.data);
-    document.getElementById("GPSINFO").innerHTML = e.data;
-  }, false);
-
-  source.addEventListener('RXFREQ', function(e) {
-    console.log("RXFREQ", e.data);
-    document.getElementById("RXFREQ").innerHTML = e.data;
-  }, false);
-
-  source.addEventListener('REPEATERINFO', function(e) {
-    console.log("REPEATERINFO", e.data);
-    document.getElementById("REPEATERINFO").innerHTML = e.data;
-  }, false);
-
-  source.addEventListener('BEACONINFO', function(e) {
-    console.log("BEACONINFO", e.data);
-    document.getElementById("BEACONINFO").innerHTML = e.data;
-  }, false);
-
-  source.addEventListener('TXFREQ', function(e) {
-    console.log("TXFREQ", e.data);
-    document.getElementById("TXFREQ").innerHTML = e.data;
-  }, false);
-}
-
-if(typeof window.history.pushState == 'function') {
-  if (window.location.href.lastIndexOf('/command')>10 || window.location.href.lastIndexOf('/reboot')>10){
-    console.log(window.location.href);
-    window.location.href =  window.location.href.substring(0,window.location.href.lastIndexOf('/'))
+    source.addEventListener('TXFREQ', function(e) {
+      console.log("TXFREQ", e.data);
+      document.getElementById("TXFREQ").innerHTML = e.data;
+    }, false);
   }
-}
+  
+  if(typeof window.history.pushState == 'function') {
+    if (window.location.href.lastIndexOf('/command')>10 || window.location.href.lastIndexOf('/reboot')>10){
+      console.log(window.location.href);
+      window.location.href =  window.location.href.substring(0,window.location.href.lastIndexOf('/'))
+    }
+  }
 
-document.getElementById('BTNFreq').onclick = function(e){
-  myObj = document.getElementById("BTNFreq");
-  if (myObj.style.backgroundColor=="white"){
-    var s = window.location.href.substring(0,window.location.href.lastIndexOf('/')) + '/nummers';
-    window.location.href = s;  
-    return false;
-  } else return true;
-}
+  document.getElementById('BTNFreq').onclick = function(e){
+    myObj = document.getElementById("BTNFreq");
+    if (myObj.style.backgroundColor=="white"){
+      var s = window.location.href.substring(0,window.location.href.lastIndexOf('/')) + '/nummers';
+      window.location.href = s;  
+      return false;
+    } else return true;
+  }
 
-document.getElementById('BTNRPT').onclick = function(e){
-  myObj = document.getElementById("BTNRPT");
-  if (myObj.style.backgroundColor=="white"){
-    var s = window.location.href.substring(0,window.location.href.lastIndexOf('/')) + '/repeaters';
-    window.location.href = s;  
-    return false;
-  } else return true;
-}
-</script>
-</body>
-</html>
+  document.getElementById('BTNRPT').onclick = function(e){
+    myObj = document.getElementById("BTNRPT");
+    if (myObj.style.backgroundColor=="white"){
+      var s = window.location.href.substring(0,window.location.href.lastIndexOf('/')) + '/repeaters';
+      window.location.href = s;  
+      return false;
+    } else return true;
+  }
+  </script>
+  </body>
+  </html>
